--- a/PS2-CHEME-5660-Student-LatticeStylizedFacts-RWPM-Fall-2025.ipynb
+++ b/PS2-CHEME-5660-Student-LatticeStylizedFacts-RWPM-Fall-2025.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# PS2: Binomial Lattice Simulation of Stylized Facts\n",
+    "# PS2: Binomial Lattice Simulation of ylized Facts\n",
     "In this problem set, you will explore by simulation whether a simple binomial lattice model can replicate stylized facts of equity returns. We've derived the binomial lattice model in class, and our analysis suggested that it can replicate some, but not all, of the stylized facts of equity returns.\n",
     "\n",
     "> __Learning Objectives:__\n",
